--- a/nginx-hpa.yaml
+++ b/nginx-hpa.yaml
@@ -6,7 +6,7 @@ spec:
   maxReplicas: 5
   minReplicas: 1
   scaleTargetRef:
-    apiVersion: extensions/v1beta1
+    apiVersion: apps/v1
     kind: Deployment
     name: nginx
   targetCPUUtilizationPercentage: 20
